:construction_worker: add second job

--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -7,3 +7,14 @@ jobs:
       - run: echo "first step"
       - name: Second step
         run: echo "second step"
+  Second-Job:
+    runs-on: ubuntu-latest
+    needs: First-Job
+    steps:
+      - run: echo "second job"
+#  Third-Job:
+#    runs-on: ubuntu-latest
+#    needs: Second-Job
+#    if: ${{github.ref === 'refs/heads/main'}}
+#    steps:
+#      - run: echo "third job"
