--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -15,6 +15,6 @@ jobs:
   Third-Job:
     runs-on: ubuntu-latest
     needs: Second-Job
-    if: ${{github.ref === 'refs/heads/main'}}
+    if: ${{github.ref == 'refs/heads/main'}}
     steps:
       - run: echo "third job"
