--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -1,12 +1,13 @@
 name: demo
 on: [push]
 jobs:
-  First-Job:
+  Build:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "first step"
-      - name: Second step
-        run: echo "second step"
+      - name: GitHub Checkout
+        run: actions/checkout@v2
+      - run: yarn install
+      - run: yarn run test
   Second-Job:
     runs-on: ubuntu-latest
     needs: First-Job
