--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: GitHub Checkout
-        run: actions/checkout@v2
+        uses: actions/checkout@v2
       - run: yarn install
       - run: yarn run test
   Second-Job:
