--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,7 +7,8 @@ jobs:
       - name: GitHub Checkout
         uses: actions/checkout@v2
       - run: yarn install
-      - run: yarn run test
+      - run: yarn timeout
+      - run: yarn run example
   Second-Job:
     runs-on: ubuntu-latest
     needs: Build
