--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -8,7 +8,7 @@ jobs:
         uses: actions/checkout@v2
       - run: yarn install
       - name: Verify Microservice One
-        run: yarn workspace one verify
+        run: yarn workspaces run verify
   Second-Job:
     runs-on: ubuntu-latest
     needs: Build
