--- a/services/two/package.json
+++ b/services/two/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "one": "echo microservice one",
+    "two": "echo microservice two",
     "timeout": "sleep 10",
     "test": "mocha \"tests/**\"",
-    "verify": "yarn run one && yarn run test && yarn run timeout"
+    "verify": "yarn run two && yarn run test && yarn run timeout"
   }
 }
