--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -9,14 +9,14 @@ jobs:
       - run: yarn install
       - name: Verify
         run: yarn workspaces run verify
-  Second-Job:
+  Deploy-Dev:
     runs-on: ubuntu-latest
     needs: Build
     steps:
       - run: echo "second job"
-  Third-Job:
+  Deploy-Staging:
     runs-on: ubuntu-latest
-    needs: Second-Job
+    needs: Deploy-Dev
     if: ${{github.ref == 'refs/heads/main'}}
     steps:
       - run: echo "third job"
