--- a/services/one/package.json
+++ b/services/one/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "one": "echo microservice one",
     "timeout": "sleep 10",
-    "test": "mocha \"tests/**\"",
+    "test": "mocha tests/**",
     "verify": "yarn run one && yarn run test && yarn run timeout"
   }
 }
