--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -1,22 +1,17 @@
 name: demo
 on: [push]
 jobs:
-  Build:
+  get-feature-branch:
+    outputs:
+      BRANCH_NAME: EI-123
     runs-on: ubuntu-latest
     steps:
-      - name: GitHub Checkout
-        uses: actions/checkout@v2
-      - run: yarn install
-      - name: Verify
-        run: yarn workspaces run verify
-  Deploy-Dev:
+      - name: echo
+        uses: echo $BRANCH_NAME
+
+  delete-branch:
     runs-on: ubuntu-latest
-    needs: Build
+    needs: get-feature-branch
     steps:
-      - run: echo "second job"
-  Deploy-Staging:
-    runs-on: ubuntu-latest
-    needs: Deploy-Dev
-    if: ${{github.ref == 'refs/heads/main'}}
-    steps:
-      - run: echo "third job"
+      - name: echo
+      - run: echo "BRANCH_NAME = ${{ needs.get-feature-branch.outputs.BRANCH_NAME }}"
