--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -7,11 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: echo
-        uses: echo $BRANCH_NAME
+        run: echo $BRANCH_NAME
 
   delete-branch:
     runs-on: ubuntu-latest
     needs: get-feature-branch
     steps:
       - name: echo
-      - run: echo "BRANCH_NAME = ${{ needs.get-feature-branch.outputs.BRANCH_NAME }}"
+        run: echo "BRANCH_NAME = ${{ needs.get-feature-branch.outputs.BRANCH_NAME }}"
