--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -16,4 +16,5 @@ jobs:
       - name: echo
         run: echo "BRANCH_NAME = ${{ needs.get-feature-branch.outputs.BRANCH_NAME }}"
       - name: lowercase
+        shell: bash
         run: echo "BRANCH_ID = ${needs.get-feature-branch.outputs.BRANCH_NAME,,}"
