--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -17,4 +17,4 @@ jobs:
         run: echo "BRANCH_ID = ${{ needs.get-feature-branch.outputs.BRANCH_NAME }}"
       - name: lowercase
         shell: bash
-        run: echo "${{ needs.get-feature-branch.outputs.BRANCH_NAME }}" | sed -e 's/\(.*\)/\L\1/'
+        run: echo "${{ needs.get-feature-branch.outputs.BRANCH_NAME }}" | sed -e 's/\(.*\)/\L\1/' | sed 's/-//g'
